--- a/css/styles.css
+++ b/css/styles.css
@@ -484,8 +484,6 @@ body {
   margin-right: auto;
   margin-left: auto;
 
-  line-height: 1.71;
-
   color: #757575;
 }
 
@@ -510,21 +508,20 @@ body {
 
 .checkbox-icon {
   display: inline-block;
-  width: 15px;
+  width: 16px;
   height: 15px;
   margin-right: 5px;
 
-  border: 2px solid;
+  /* border: 2px solid;
   border-color: #212121;
   border-radius: 4px;
   cursor: pointer;
 
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
 
 .modal-checkbox:checked + .checkbox-icon {
   border-color: transparent;
-  background-color: #2196f3;
   background-image: url(../images/check.svg);
   background-size: contain;
   background-origin: border-box;
